feature, fix : 인증로직 일부 수정, index.html 헤더부분 기능 추가

--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -10,6 +10,13 @@
     const host = 'http://' + window.location.host;
 
     function onLogin(){
+
+      // 쿠키 삭제
+      document.cookie.split(";").forEach(function(c) {
+        document.cookie = c.replace(/^ +/, "").replace(/=.*/, "=;expires=" + new Date().toUTCString() + ";path=/");
+      });
+
+
       let loginname = $('#loginname').val();
       let password = $('#password').val();
 
