--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
   <title>withUs</title>
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
           integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-  <link href="/css/Bootstrap.min.css" rel="stylesheet">
+  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
   <style>
     .main{
       padding-right: 20%;
@@ -18,6 +18,19 @@
     .create{
       margin-left: 15px;
       font-weight: bolder;
+    }
+
+    .title2 {
+      float: right;
+      display: flex;
+      align-items: center;
+    }
+
+    .title2 img {
+      cursor: pointer;
+      width: 35px;
+      height: 35px;
+      margin: 5px;
     }
 
 
@@ -150,76 +163,111 @@
       align-items: center;
       justify-content: center;
     }
+
     footer{
       width: 60%;
       position:absolute;
       bottom:0;
     }
+
     .btn2{
       border-radius: 24px;
     }
 
 
+
+
   </style>
   <script th:inline="javascript">
+    const host = 'http://' + window.location.host;
     let clubId = /*[[${clubId}]]*/ '';
     let category = 'ALL';
     let clubImage;
     let clubName;
     let clubContent;
     let numberOfPeople;
+    var memberId = /*[[${memberId}]]*/ '';
 
     $(document).ready(function (){
 
-      console.log("카테고리 : "+category)
+      console.log("카테고리 : " + category)
 
-      $.ajax({
-        type: 'GET',
-        url: '/api/club/'+category+'/club',
-        contentType: 'application/json',
-        success: function (response){
-          for(var i=0; i<response.data.length; i++){
-            var currentItem = response.data[i];
-            if(currentItem.imageURL !== null){
-              clubImage = currentItem.imageURL;
-            } else{
-              clubImage = '/img/default.png';
-            }
-            clubId = currentItem.clubId;
-            clubName = currentItem.clubTitle;
-            clubContent = currentItem.content;
-            numberOfPeople = currentItem.maxMember;
-            console.log("생성완료");
-            $('#cardGroup').append($('<div class="cardGroup" >\n'
-                + '    <tr>\n'
-                + '      <div class="cardParent">\n'
-                + '        <div id="'+clubId+'" class="card mb-3" onclick="getClub()">\n'
-                + '          <div>\n'
-                + '            <div>\n'
-                + '              <div class="image">\n'
-                + '                <img src="'+clubImage+'" class="img-fluid rounded-start" alt="...">\n'
-                + '              </div>\n'
-                + '            </div>\n'
-                + '            <div class="cardText">\n'
-                + '              <div>\n'
-                + '                <div class="card-body">\n'
-                + '                  <p class="card-title">'+clubName+'</p>\n'
-                + '                  <p class="card-text">'+clubContent+'</p>\n'
-                + '                  <p class="card-text">'+numberOfPeople+'</p>\n'
-                + '                </div>\n'
-                + '              </div>\n'
-                + '            </div>\n'
-                + '          </div>\n'
-                + '        </div>\n'
-                + '      </div>\n'
-                + '    </tr>\n'
-                + '  </div>'
+      // $.ajax({
+      //   type: 'GET',
+      //   url: '/api/club/' + category + '/club',
+      //   contentType: 'application/json',
+      //   success: function (response){
+      //     for(var i=0; i<response.data.length; i++){
+      //       var currentItem = response.data[i];
+      //       if(currentItem.imageURL !== null){
+      //         clubImage = currentItem.imageURL;
+      //       } else{
+      //         clubImage = '/img/default.png';
+      //       }
+      //       clubId = currentItem.clubId;
+      //       clubName = currentItem.clubTitle;
+      //       clubContent = currentItem.content;
+      //       numberOfPeople = currentItem.maxMember;
+      //       console.log("생성완료");
+      //       $('#cardGroup').append($('<div class="cardGroup" >\n'
+      //           + '    <tr>\n'
+      //           + '      <div class="cardParent">\n'
+      //           + '        <div id="'+clubId+'" class="card mb-3" onclick="getClub()">\n'
+      //           + '          <div>\n'
+      //           + '            <div>\n'
+      //           + '              <div class="image">\n'
+      //           + '                <img src="'+clubImage+'" class="img-fluid rounded-start" alt="...">\n'
+      //           + '              </div>\n'
+      //           + '            </div>\n'
+      //           + '            <div class="cardText">\n'
+      //           + '              <div>\n'
+      //           + '                <div class="card-body">\n'
+      //           + '                  <p class="card-title">'+clubName+'</p>\n'
+      //           + '                  <p class="card-text">'+clubContent+'</p>\n'
+      //           + '                  <p class="card-text">'+numberOfPeople+'</p>\n'
+      //           + '                </div>\n'
+      //           + '              </div>\n'
+      //           + '            </div>\n'
+      //           + '          </div>\n'
+      //           + '        </div>\n'
+      //           + '      </div>\n'
+      //           + '    </tr>\n'
+      //           + '  </div>'
+      //
+      //           )
+      //       );
+      //     }
+      //   }
+      // });
 
-                )
-            );
-          }
-        }
+
+
+
+
+      if (memberId !== undefined && memberId !== null && memberId !== '') {
+        // memberId가 존재하면 로그인 버튼을 숨기고 채팅 이미지를 표시합니다.
+        $('#loginBtn').hide();
+        $('#chatting').show();
+        $('#myInfo').show();
+      } else {
+        // memberId가 존재하지 않으면 로그인 버튼을 표시하고 채팅 이미지를 숨깁니다.
+        $('#loginBtn').show();
+        $('#chatting').hide();
+        $('#myInfo').hide();
+      }
+
+      $("#loginBtn").on("click", function(e) {
+        window.location.href = host + '/api/member/loginPage';
       });
+
+      $("#chatting").on("click", function(e) {
+        window.location.href = host + '/api/chat/chatRoomList/' + memberId;
+      });
+
+      $("#myInfo").on("click", function(e) {
+        window.location.href = host + '/api/member/profilePage/' + memberId;
+      });
+
     });
 
     function getClub(){
@@ -287,23 +335,26 @@
       });
     }
 
+
     function searchKeyword(){
 
     }
   </script>
 </head>
-<body>
+<body style="background-image: url('/img/background.jpg'); background-size: cover; ">
 <div class="main ">
 
   <div class="title">
     <header>
       <div class="title-group" role="group">
         <div class="title">
-          <h2 class="withUs" th:onclick="|location.href='@{/}'|" style="float: left">withUs</h2>
+          <h2 class="withUs" th:onclick="|location.href='@{/}'|" style="float: left; cursor: pointer; margin-top: 5px ">withUs</h2>
         </div>
-        <div class="title2" style="float: right">
-          <h2 class="login" style="float: left" >login</h2>
-          <h2 class="create" style="float: right" >create</h2>
+        <div class="title2" style="float: right; display: flex; align-items: center; gap: 20px;">
+          <img src="/img/message.png" id="chatting" class="chat-icon" style="float: left; cursor: pointer; display: none; width: 35px; height: 35px; margin-right: 5px; margin-top: 5px">
+          <h2 class="login" id="loginBtn" style="float: left; cursor: pointer; margin-top: 5px" >login</h2>
+          <img src="/img/myInfo.png" id="myInfo" class="my-info" style="cursor: pointer; width: 35px; height: 35px; margin-top: 5px" >
+          <img src="/img/create.png"  class="create" style="float: right; cursor: pointer; width: 35px; height: 35px; margin-top: 5px" >
         </div>
       </div>
     </header>
@@ -342,28 +393,28 @@
 
 
   <div id="cardGroup">
-<!--    <tr>-->
-<!--      <div class="cardParent">-->
-<!--        <div class="card mb-3" >-->
-<!--          <div class="row g-0">-->
-<!--            <div class="col-md-4">-->
-<!--              <div class="image">-->
-<!--                <img id="clubImage" class="img-fluid rounded-start" alt="..." style="float: left" >-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="cardText">-->
-<!--              <div class="col-md-8">-->
-<!--                <div class="card-body">-->
-<!--                  <p class="card-title" id="clubName"></p>-->
-<!--                  <p class="card-text" id="clubContent"></p>-->
-<!--                  <p class="card-text" id="numberOfPeople"></p>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </tr>-->
+    <!--    <tr>-->
+    <!--      <div class="cardParent">-->
+    <!--        <div class="card mb-3" >-->
+    <!--          <div class="row g-0">-->
+    <!--            <div class="col-md-4">-->
+    <!--              <div class="image">-->
+    <!--                <img id="clubImage" class="img-fluid rounded-start" alt="..." style="float: left" >-->
+    <!--              </div>-->
+    <!--            </div>-->
+    <!--            <div class="cardText">-->
+    <!--              <div class="col-md-8">-->
+    <!--                <div class="card-body">-->
+    <!--                  <p class="card-title" id="clubName"></p>-->
+    <!--                  <p class="card-text" id="clubContent"></p>-->
+    <!--                  <p class="card-text" id="numberOfPeople"></p>-->
+    <!--                </div>-->
+    <!--              </div>-->
+    <!--            </div>-->
+    <!--          </div>-->
+    <!--        </div>-->
+    <!--      </div>-->
+    <!--    </tr>-->
   </div>
 
   <footer>
