--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
           integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-  <link th:href="@{/css/Bootstrap.min.css}" rel="stylesheet">
+  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
   <title>회원 정보</title>
 
   <script th:inline="javascript">
@@ -87,7 +87,7 @@
     }
   </script>
 </head>
-<body style="background-image: url('/img/background.jpg'); background-size: cover; background-position: center;">
+<body style="background-image: url('/img/background.jpg'); background-size: cover;">
 <div style="margin: 40px 35% 200px 35%">
   <div>
     <img id="profileImage"
