club front 초대 작성 수정

--- a/src/main/resources/static/css/clubpost.css
+++ b/src/main/resources/static/css/clubpost.css
@@ -15,6 +15,7 @@ body {
 .all-container {
     border-radius: 15px;
     /*background-image: url(https://cdn.class101.net/images/a53280a2-5a97-4241-8069-04274b016896);*/
+    background-color: #98a9bc;
     width: 1600px;
     height: 950px;
     margin: 0 auto;
