--- a/src/main/resources/templates/club/post-club.html
+++ b/src/main/resources/templates/club/post-club.html
@@ -70,9 +70,9 @@
                     </div>
                     <div>
                         <input id="searchInput" class="search-input" type="text" placeholder="초대할 사람">
-                        <button id="search-image" class="search-btn" onclick="inviteMember()">
-                            초대
-                        </button>
+<!--                        <button id="search-image" class="search-btn" onclick="inviteMember()">-->
+<!--                            초대-->
+<!--                        </button>-->
                         <h5>초대 목록</h5>
                         <div id = "invite-container">
                             초대 이름:
