--- a/src/main/resources/templates/auth/signupPage.html
+++ b/src/main/resources/templates/auth/signupPage.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <link th:href="@{bootstrap.min.css}"
-        href="/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+          integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
   <title>withUs</title>
 </head>
 <script th:inline="javascript">
@@ -17,8 +17,13 @@
       dataType:"json",
       data : JSON.stringify({email}),
       success: function (response) {
+        alert("이메일요청이 완료되었습니다. 이메일을 확인해주세요")
         console.log(response);
+      },
+      error: function (error) {
+        console.log('email요청 실패', error);
       }
+
     })
 
   }
