--- a/src/main/resources/templates/auth/loginPage.html
+++ b/src/main/resources/templates/auth/loginPage.html
@@ -2,8 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <link th:href="@{/css/Bootstrap.min.css}" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+          integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
   <title>withUs</title>
 
   <script th:inline="javascript">
@@ -31,8 +32,8 @@
         window.location.href = host + '/';
         // 추후에 메인페이지로 이동으로 변경
       })
-      .fail(function (res) {
-        alert("Login Fail" + res.getWriter());
+      .fail(function (error) {
+        alert("로그인 실패! 다시 로그인 해주세요.");
         window.location.href = '/api/member/loginPage'
       });
     }
