--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -249,7 +249,7 @@
       }
     })
 
-
+// 1~2 페이지
     const cntList = [[${countList}]];
     $(cntList).each(function (index,res){
       // const card = '<li class="page-item"><a class="page-link" href="@{api/notice/{noticeId}(noticeId=${'+noticeId+'})/comment(page=${'+res+'})}">'+res+'</a></li>';
