--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script th:src="@{/js/getclub.js}"></script>
     <script th:src="@{/js/deleteclub.js}"></script>
+    <script th:src="@{/js/clubPage.js}"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/clubstyle.css}">
@@ -37,7 +38,6 @@
                         수정
                     </button>
 
-
                 </article>
                 <article class="club-button-container2">
                     <button id="deleteButton">
@@ -59,9 +59,6 @@
                     </div>
                     <div class="notice-box">
                         공지사항
-                        <button class="notice-button">
-                            바로가기
-                        </button>
                     </div>
                 </div>
             </article>
@@ -87,10 +84,14 @@
                 </article>
             </div>
             <div class="item3">
-                <h1 class=invite>클럼 참가자</h1>
+                <h4 class=invite>클럼 참가자</h4>
+                <h5 class=invite-member>
+
+                </h5>
             </div>
         </section>
     </div>
+
 </main>
 </body>
 
