notice 디테일 페이지 수정

--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -407,7 +407,7 @@
               + '          <textarea style="float: left; width: 650px;height:60px;font-size:14px; margin-bottom: 10px" id="' + id + '" disabled>'+comment+'</textarea>\n'
               + '          <div style="float: right"> \n'
               + '             <button style="float: left; margin-right: 5px; font-size: small; display: none" id="Editr_'+id+'" onclick="commentEditRequest(\'' + id + '\')">수정 완료</button> \n'
-              + '             <button style="float: left; margin-right: 5px; font-size: small" id="Edit_'+id+'" onclick="commentEdit(\'' + id + '\')">수정</button> \n'
+              + '             <button style="float: left; margin-right: 5px; font-size: small" id="Edit_'+id+'" >수정</button> \n'
               + '              <button style="float: right; margin-left: 5px; font-size: small" id="Delete_'+id+'" onclick="commentDelete(\'' + id + '\')">삭제</button> \n'
               + '           </div> \n'
               + '        </blockquote>\n'
