--- a/src/main/resources/templates/club/revise-club.html
+++ b/src/main/resources/templates/club/revise-club.html
@@ -10,16 +10,77 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link th:href="@{/css/bootstrap.min.css}" href="../../static/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/clubrevise.css}">
+
+    <script th:inline="javascript">
+        const host = 'http://' + window.location.host;
+        var memberId;
+
+        $(document).ready(function () {
+            memberId = /*[[${memberId}]]*/ '';
+            console.log(memberId);
+
+            $("#chatting").on("click", function(e) {
+                window.location.href = host + '/api/chat/chatRoomList/' + memberId;
+            });
+
+            $("#myInfo").on("click", function(e) {
+                window.location.href = host + '/api/member/profilePage/' + memberId;
+            });
+
+            $("#logout").on("click", function(e) {
+                var confirmLogout = window.confirm('로그아웃 하시겠습니까?');
+
+                if (confirmLogout) {
+
+                    $.ajax({
+                        type: 'Post',
+                        url: '/api/member/logout',
+                        contentType: ''
+                    })
+                    .done(function (res, status, xhr) {
+                        window.location.href = host + '/'
+                    })
+                    .fail(function (xhr, status, error) {
+                        console.error('로그아웃 요청 API 에러', error);
+                    })
+
+                } else {
+                    alert('로그아웃 취소');
+                }
+
+            });
+
+
+        })
+    </script>
 </head>
 
 <body>
-<nav>
-    <section id="club-name">
-        <div class="title-container">
-            <h1 class="main-title">withUs</h1>
-        </div>
-    </section>
-</nav>
+
+<div class="main">
+    <div class="title">
+        <header>
+            <div class="title-group" role="group">
+                <div class="title1">
+                    <h2 class="withUs" th:onclick="|location.href='@{/}'|">withUs</h2>
+                </div>
+                <div class="title2">
+                    <img src="/img/message.png" id="chatting" class="chat-icon">
+                    <img src="/img/myInfo.png" id="myInfo" class="my-info">
+                    <img src="/img/logout.png" id="logout" class="logout">
+                </div>
+            </div>
+        </header>
+    </div>
+</div>
+
+<!--<nav>-->
+<!--    <section id="club-name">-->
+<!--        <div class="title-container">-->
+<!--            <h1 class="main-title">withUs</h1>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--</nav>-->
 <main>
     <div class="all-container">
         <section id="club-title">
