--- a/src/main/resources/templates/notice/noticeAdd.html
+++ b/src/main/resources/templates/notice/noticeAdd.html
@@ -110,7 +110,7 @@
     const clubId = [[${clubId}]];
     let title = $('#title').val();
     let content = $('#content').val();
-
+    window.location.href = "/api/club/main-club/" + clubId;
 
 
 
