--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -17,7 +17,7 @@
 <body>
 <!-- section -->
 <nav>
-    <div>
+    <div>git
         <section id="club-name">
             <div class="title-container">
                 <h1 class="main-title">withUs</h1>
