club image 새로고침 사라지는 버그 수정 및 삭제 수정

--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -117,9 +117,7 @@
                 </article>
             </div>
 
-            <button id="Notice-post" onclick="navigateToNoticeAddPage()">
-                작성
-            </button>
+
             <div class="button-item">
                 <article class="club-button-container1">
                     <button id="reviseButton">
@@ -136,8 +134,14 @@
         </section>
 
         <section id="notice-container">
-
-            <h1 class="Noitce"> Notice </h1>
+            <div>
+                <button id="Notice-post" onclick="navigateToNoticeAddPage()">
+                    작성
+                </button>
+                <div>
+                    <h1 class="Noitce"> Notice </h1>
+                </div>
+            </div>
             <article class="Notice-container">
                 <div class="category-list" id = "notice-box">
                 </div>
