--- a/src/main/resources/templates/club/revise-club.html
+++ b/src/main/resources/templates/club/revise-club.html
@@ -113,10 +113,10 @@
                     <input type="file" id="fileInput" onchange="handleFileSelect()">
                 </button>
                 <button id="imgBtn2" class="header_btn2">
-                    <img src="/iconsssss/comment-check_5068752.png">
+                    <img src="/icons/comment-check_5068752.png">
                 </button>
                 <button id="imgBtn3" class="header_btn3">
-                    <img src="/iconsssss/icons8-취소-30.png">
+                    <img src="/icons/icons8-취소-30.png">
                 </button>
 
             </div>
