--- a/src/main/resources/static/css/clubstyle.css
+++ b/src/main/resources/static/css/clubstyle.css
@@ -38,7 +38,25 @@ body {
 .title1 {
     margin-left: -5%;
 }
-
+/*버튼 컨테이너*/
+.club-button-container1{
+    margin-right: 10px;
+}
+/*수정*/
+#reviseButton{
+    background: none;
+    border: none;
+}
+/*삭제*/
+#deleteButton{
+    background: none;
+    border: none;
+}
+/*notice 작성*/
+#Notice-post{
+    background: none;
+    border: none;
+}
 
 .title2 {
     float: right;
@@ -139,14 +157,42 @@ body {
     padding: 15px;
     margin-right: 10px;
     margin-bottom: 10px;
-    text-align:center;
+    text-align: center;
 }
+
+.pagination {
+    display: flex;
+    justify-content: center;
+}
+
 #Notice-post{
     float: right;
     margin-bottom: 80px;
 }
 .page-itme{
     text-align: center;
+}
+.page-link {
+   padding: 0.375rem .75rem;
+    position: relative;
+    display: block;
+    color: #0d6efd;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    margin: 1px;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+}
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+p {
+    margin-block-start: 1em;
+    margin-block-end: 10px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
 .board-button{
