--- a/src/main/resources/static/css/clubrevise.css
+++ b/src/main/resources/static/css/clubrevise.css
@@ -17,7 +17,7 @@ body {
     /*background-image: url(https://cdn.class101.net/images/a53280a2-5a97-4241-8069-04274b016896);*/
     background-color: #98a9bc;
     width: 100%;
-    height: 950px;
+    height: 100%;
     margin: 0 auto;
 }
 
@@ -154,11 +154,26 @@ body {
     padding: 10px;
     margin: 5px;
 }
+
+.header_btn2:hover{
+    border-radius: 10px;
+    background-color: #ddd;
+    border: none;
+    color: #333;
+}
+
 .header_btn3{
     background: none;
     border: none;
     padding: 10PX;
     margin: 5px;
+}
+
+.header_btn3:hover{
+    border-radius: 10px;
+    background-color: #ddd;
+    border: none;
+    color: #333;
 }
 .search-input{
     border-radius: 10px;
